recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:4: error: Int does not take parameters
length(1);
      ^