recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
gauche(angle);
avance(steps);
length(1);
  

 

}